# pme-toolkit

./: .gitignore  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  run_back.m  run_pme.m  sitemap.xml
.github/workflows/: docs-pages.yml  matlab-tests.yml  python-ci.yml  python-tests.yml
backmapping/: index.html
backmapping_config/: index.html
benchmarks/: README.md  index.html
citation/: index.html
config_spec/: index.html
databases/: README.md
databases/airfoil/: README.md  dataset.json  metadata.txt
databases/glider/: README.md  dataset.json  metadata.txt
datasets/: index.html
docs/: backmapping.md  backmapping_config.md  benchmarks.md  citation.md  config_spec.md  datasets.md  index.md  input_data.md  matlab_api.md  python_api.md  quickstart.md  reproducibility.md  results.md  visualization.md  workflow.md
input_data/: index.html
matlab/: README.md
matlab/src/+pme/: backmapping.m  choose_nconf.m  compose_P.m  decompose_P.m  defaults.m  ensure_case_inputs.m  filters.m  fit.m  inverse.m  io.m  load_db.m  parse_layout.m  plot_modes.m  plot_nmse_by_source.m  (+12 more)
matlab_api/: index.html
paper/: paper.bib  paper.md
python/: README.md  pyproject.toml
python/src/pme_toolkit/: __init__.py  backmapping.py  cli.py  config.py  config_loader.py  datasets.py  filters.py  io.py  layout.py  model.py  plotting.py  report.py  run_back.py  run_case.py  weights.py
python/src/pme_toolkit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
python/tests/: test_config_loader.py  test_run_case.py
python/tmp_run_case/: manifest.json  report.json
python_api/: index.html
quickstart/: index.html
reproducibility/: index.html
search/: search_index.json
tests/: run_tests.m  test_backmapping.m  test_pme.m  test_regression.m
tests/cases/: test_glider.json  test_glider_back.json  x01.txt
tests/data/: glider_range.mat  glider_tiny.mat
tests/matlab/: run_tests.m  test_backmapping.m  test_config_loader.m  test_pme.m  test_regression.m  test_run_case.m
tests/python/: test_backmapping.py  test_pme_core.py  test_regression.py  test_run_case.py
tests/reference/: matlab_glider_reference.mat
visualization/: index.html
workflow/: index.html
(+32 files in other folders)
