[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pme-toolkit"
version = "1.2.0"
description = "Python implementation scaffold and core PME workflow for PME-toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Andrea Serani" }
]
license = { text = "MIT" }
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
