[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pme-toolkit"
version = "1.2.0"
description = "Python implementation of PME-toolkit with PME, PI-PME, and PD-PME workflows"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Andrea Serani", email = "andrea.serani@cnr.it" }
]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
pme-run = "pme_toolkit.run_case:main"
pme-back = "pme_toolkit.run_back:main"

[project.urls]
Homepage = "https://cnr-inm-mao.github.io/pme-toolkit/"
Documentation = "https://cnr-inm-mao.github.io/pme-toolkit/"
Repository = "https://github.com/cnr-inm-mao/pme-toolkit"
Issues = "https://github.com/cnr-inm-mao/pme-toolkit/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
